# glance-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  glama.json  justfile  llms.txt  pyproject.toml  start.bat  start.ps1
docs/: EXAMPLE_FEEDS.md  POLICY_NO_SCRAPE.md  PRD.md
native/: build.ps1
src/glance_mcp/: __init__.py  __main__.py  app.py  config.py  net_safety.py  server.py
src/glance_mcp/services/: __init__.py  opml.py  probe.py  resolve.py  rss.py  utilities.py  weather.py
tests/: __init__.py  test_net_safety.py  test_opml.py  test_weather_parse.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  vite.config.ts
web_sota/src/: App.tsx  example_feeds.ts  index.css
